# Version 0.34

## New Features

- implement dataStore integrity restoration in integrityCheck method -- kaneryu on 2025-08-23

## Bugfixes

- update search function to allow None as a filter, add copilot Instructions -- kaneryu on 2025-08-24



# Version 0.33

## New Features

- add basic integration with windows SMTC -- kaneryu on 2025-08-23



# Version 0.32

## New Features

- implement logging system with notification support and structured log history -- kaneryu on 2025-08-08

## Bugfixes

- allow for use of video as a playback MRL -- kaneryu on 2025-08-13
- make presence use artist instead of song title -- kaneryu on 2025-08-23



# Version 0.31

## New Features

- add settings page -- kaneryu on 2025-08-01

## Bugfixes

- fix bug where settings would not save to disk -- kaneryu on 2025-08-01



# Version 0.30

## New Features

- add new discord RPC feature -- kaneryu on 2025-07-27

## Bugfixes

- add ability for downloader to retry downloading song if chunking doesn't work -- kaneryu on 2025-07-27



# Version 0.29

## New Features

- begin work on login -- kaneryu on 2025-03-09

## Bugfixes

- make progressbar a bit larger -- kaneryu on 2025-03-12
- add some things to cleanup -- kaneryu on 2025-03-14
- Bump dependencies, swap out ytmusicapi for my own version (still async) -- kaneryu on 2025-07-02
- Make sure presence is stopped and the thread is properly deleted when the app is closed -- kaneryu on 2025-07-03
- codebase now passes mypy check (not in strict mode, with some changes made in mypy.ini) -- kaneryu on 2025-07-05
- songs can now be in the queue without a MRL ready -- kaneryu on 2025-07-07
- If expiration isn't set, ignore it -- kaneryu on 2025-07-07
- Add active song playing check -- kaneryu on 2025-07-27



# Version 0.28

## New Features

- implement part of reworked networking -- kaneryu on 2025-03-08



# Version 0.27

## New Features

- Add functioning marquee to text elements -- kaneryu on 2025-03-04



# Version 0.26

## New Features
