@@ -1,1 +1,1 @@
-0.34.1
+0.34.2
